samples fixes