@@ -26,6 +26,7 @@
 
 package org.openjdk.jextract.clang;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
 
@@ -105,8 +106,8 @@ public final class Type extends ClangDisposable.Owned {
 
     // Struct/RecordType
     private long getOffsetOf0(String fieldName) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment cfname = session.allocateUtf8String(fieldName);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment cfname = arena.allocateUtf8String(fieldName);
             return Index_h.clang_Type_getOffsetOf(segment, cfname);
         }
     }
