@@ -21,6 +21,7 @@
  * questions.
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
@@ -49,10 +50,10 @@ import static java.lang.foreign.Linker.*;
 public class Test8244959 {
     @Test
     public void testsPrintf() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment s = session.allocate(1024);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment s = arena.allocate(1024);
             my_sprintf(s,
-                    session.allocateUtf8String("%hhd %c %.2f %.2f %lld %lld %d %hd %d %d %lld %c"), 12,
+                    arena.allocateUtf8String("%hhd %c %.2f %.2f %lld %lld %d %hd %d %d %lld %c"), 12,
                     (byte) 1, 'b', -1.25f, 5.5d, -200L, Long.MAX_VALUE, (byte) -2, (short) 2, 3, (short) -4, 5L, 'a');
             String str = s.getUtf8String(0);
             assertEquals(str, "1 b -1.25 5.50 -200 " + Long.MAX_VALUE + " -2 2 3 -4 5 a");
